log
Sun 23 Mar 2025 12:24:43 AM UTC: 
 exercises.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 56 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:126:25: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  126 |       push(PAper, cadena[cont]);
      |                   ~~~~~~^~~~~~
      |                         |
      |                         char
In file included from exercises.c:2:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:131:43: error: comparison between pointer and integer [-Werror]
  131 |       if(cadena[cont] == '('&& top(PAper) == ')' ||
      |                                           ^~
exercises.c:132:42: error: comparison between pointer and integer [-Werror]
  132 |         cadena[cont] == '{'&& top(PAper) == '}' ||
      |                                          ^~
exercises.c:131:29: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  131 |       if(cadena[cont] == '('&& top(PAper) == ')' ||
      |          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
exercises.c:133:42: error: comparison between pointer and integer [-Werror]
  133 |         cadena[cont] == '['&& top(PAper) == ']' ){
      |                                          ^~
exercises.c:133:28: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  133 |         cadena[cont] == '['&& top(PAper) == ']' ){
      |         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
exercises.c:140:1: error: control reaches end of non-void function [-Werror=return-type]
  140 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3f6cb15
Sun 23 Mar 2025 12:35:03 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:126:19: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
  126 |       push(PAper, (long*)cadena[cont]);
      |                   ^
exercises.c:131:43: error: comparison between pointer and integer [-Werror]
  131 |       if(cadena[cont] == '('&& top(PAper) == ')' ||
      |                                           ^~
exercises.c:132:42: error: comparison between pointer and integer [-Werror]
  132 |         cadena[cont] == '{'&& top(PAper) == '}' ||
      |                                          ^~
exercises.c:131:29: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  131 |       if(cadena[cont] == '('&& top(PAper) == ')' ||
      |          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
exercises.c:133:42: error: comparison between pointer and integer [-Werror]
  133 |         cadena[cont] == '['&& top(PAper) == ']' ){
      |                                          ^~
exercises.c:133:28: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  133 |         cadena[cont] == '['&& top(PAper) == ']' ){
      |         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
exercises.c:140:1: error: control reaches end of non-void function [-Werror=return-type]
  140 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a2d6e53
